# prosopon

./: .gitignore  .mailmap  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTROL.md  Cargo.toml  Makefile  PLANS.md  README.md  package.json  rustfmt.toml  turbo.json
.control/: policy.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/prosopon-cli/: Cargo.toml
crates/prosopon-cli/src/: main.rs
crates/prosopon-compositor-glass/: Cargo.toml  README.md
crates/prosopon-compositor-glass/src/: assets.rs  compositor.rs  fanout.rs  lib.rs  server.rs  surface.rs
crates/prosopon-compositor-glass/tests/: apply_totality.rs  server_handshake.rs
crates/prosopon-compositor-glass/tests/fixtures/: demo_scene.jsonl
crates/prosopon-compositor-glass/web/: .gitignore  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
crates/prosopon-compositor-glass/web/src/: app.tsx  index.tsx
crates/prosopon-compositor-glass/web/src/actions/: emit.ts
crates/prosopon-compositor-glass/web/src/components/: Audio.tsx  Choice.tsx  Citation.tsx  Code.tsx  Confirm.tsx  Custom.tsx  Divider.tsx  EntityRef.tsx  Image.tsx  Input.tsx  Link.tsx  Math.tsx  Node.tsx  Progress.tsx  Prose.tsx  Section.tsx  Signal.tsx  Stream.tsx  ToolCall.tsx  ToolResult.tsx  Video.tsx
crates/prosopon-compositor-glass/web/src/registry/: context.ts  fallback.tsx  intents.ts
crates/prosopon-compositor-glass/web/src/runtime/: scene-store.ts  signal-bus.ts  transport.ts  types.ts
crates/prosopon-compositor-glass/web/src/tokens/: glass.css  index.ts
crates/prosopon-compositor-glass/web/src/util/: binding.ts  format.ts
crates/prosopon-compositor-glass/web/tests/: apply.test.ts  binding.test.ts  goldens.test.tsx  setup.ts  totality.test.tsx
crates/prosopon-compositor-glass/web/tests/__snapshots__/: goldens.test.tsx.snap
crates/prosopon-compositor-glass/web/tests/fixtures/: demo_scene.json  file_flow.json  streaming_tokens.json  tool_flow.json
crates/prosopon-compositor-text/: Cargo.toml
crates/prosopon-compositor-text/src/: lib.rs  render.rs  target.rs
crates/prosopon-compositor-text/tests/: goldens.rs
crates/prosopon-compositor-text/tests/snapshots/: goldens__demo_scene_snapshot.snap  goldens__file_flow_snapshot.snap  goldens__streaming_tokens_snapshot.snap  goldens__tool_flow_snapshot.snap
crates/prosopon-core/: Cargo.toml
crates/prosopon-core/src/: action.rs  error.rs  event.rs  ids.rs  intent.rs  lib.rs  lifecycle.rs  node.rs  scene.rs  signal.rs  value.rs
crates/prosopon-daemon/: Cargo.toml  README.md
crates/prosopon-daemon/src/: fanout.rs  lib.rs  server.rs  surface.rs
crates/prosopon-pneuma/: Cargo.toml
crates/prosopon-pneuma/src/: lib.rs
crates/prosopon-protocol/: Cargo.toml
crates/prosopon-protocol/src/: lib.rs
crates/prosopon-runtime/: Cargo.toml
crates/prosopon-runtime/src/: bus.rs  compositor.rs  lib.rs  store.rs
crates/prosopon-sdk/: Cargo.toml
crates/prosopon-sdk/src/: ir.rs  lib.rs  session.rs
docs/: positioning.md
docs/continuation-prompts/: 2026-04-21-glass-and-arcan-emit.md
docs/release/: publishing.md
docs/rfcs/: 0001-ir-schema.md  0002-compositor-contract.md  0003-pneuma-binding.md  0004-filesystem-intents.md
docs/superpowers/plans/: 2026-04-22-bro-767-glass-compositor.md  2026-04-23-bro-768-prosopon-daemon.md
docs/surfaces/: audio.md  field.md  glass.md  spatial.md  text.md
examples/hello-prosopon/: Cargo.toml
examples/hello-prosopon/src/: main.rs
