[package]
name = "prosopon-compositor-text"
description = "Reference text compositor for Prosopon — ANSI terminal with Pretext-style living prose."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["compositor", "terminal", "ansi", "pretext", "agents"]
categories = ["command-line-interface", "gui"]

[dependencies]
prosopon-core.workspace = true
prosopon-runtime.workspace = true

crossterm.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
indexmap.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
