[package]
name = "prosopon-core"
description = "Semantic UI intermediate representation for agent display — the Prosopon IR."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["ui", "ir", "agents", "semantic", "protocol"]
categories = ["gui", "data-structures"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
indexmap.workspace = true
smallvec.workspace = true
schemars.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
