[package]
name = "prosopon-protocol"
description = "Wire protocol envelope, codecs, and versioning for the Prosopon display server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["protocol", "ui", "ir", "agents", "wire-format"]
categories = ["encoding", "network-programming"]

[dependencies]
prosopon-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
